# ChangeLog for net-mail/courier-imap
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/courier-imap/ChangeLog,v 1.6 2002/06/13 18:58:04 nitro Exp $


*courier-imap-1.4.5-r1 (8 Jun 2002)

  8 Jun 2002; Kyle Manna <nitro@gentoo.org> :

    Added pop3 init scripts.

*courier-imap-1.4.3-r1 (30 Apr 2002)

  30 Apr 2002; Donny Davies <woodchip@gentoo.org> :

  Added tcltk? ( >=dev-tcltk/expect-5.33.0 ) to RDEPEND, closing #2282.

*courier-imap-1.4.3 (1 Apr 2002)

  1 Apr 2002; Donny Davies <woodchip@gentoo.org> :

  Updated to latest release.  Added --enable-workarounds-for-imap-client-bugs
  to ./configure which helps some clients; notably Netscape Messenger.  Now
  installs a pam_stack aware pam.d/ file.

*courier-imap-1.4.1-r4 (14 Mar 2002)

  14 Mar 2002; Grant Goodyear <g2boojum@gentoo.org> :

  Fixed bug where /etc/courier-imap/pop3d didn't have MAILDIR=.maildir set.

*courier-imap-1.4.1-r2 (21 Feb 2002)

21 Feb 2002; Grant Goodyear <g2boojum@gentoo.org> :

  Modified the ebuild so that /usr/sbin/{imapd,pop3d} get renamed to
  /usr/sbin/{courier-imapd,courier-pop3d}.  I also had to change hack
  the /usr/lib/courier-imap/*.rc files to call these newly-named functions.
  While I was at it I cleaned up the ebuilds and fixed the not-yet-caught
  bug that pop3d was still trying to use Maildir instead of ${MAILDIR}.
  Fixes bug #584.

*courier-imap-1.4.1-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.