@@ -1,0 +1,1 @@
+MD5 b3416b15e7b3b5632aad75cf7532450f courier-imap-1.4.5.tar.gz 1251897
